[commit 7 - Hassan][Fixed minor bugs displaying user / product on HTTP request]